[gd_scene load_steps=7 format=2]

[ext_resource path="res://Page/Page.gd" type="Script" id=1]
[ext_resource path="res://Field/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://Field/HeaderField.tscn" type="PackedScene" id=3]
[ext_resource path="res://Field/DamageField.tscn" type="PackedScene" id=4]
[ext_resource path="res://Field/StatField.tscn" type="PackedScene" id=5]
[ext_resource path="res://Field/ArmorField.tscn" type="PackedScene" id=6]

[node name="Page" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 185.0
margin_bottom = 563.0

[node name="HeaderField" parent="Container" instance=ExtResource( 3 )]
margin_right = 185.0
margin_bottom = 24.0

[node name="SizeList" type="ItemList" parent="Container"]
margin_top = 28.0
margin_right = 185.0
margin_bottom = 163.0
items = [ "Miniscule", null, false, "Tiny", null, false, "Small", null, false, "Average", null, false, "Large", null, false, "Huge", null, false, "Vast", null, false ]
auto_height = true

[node name="ArmorField" parent="Container" instance=ExtResource( 6 )]
margin_top = 167.0
margin_right = 185.0
margin_bottom = 191.0

[node name="StatField" parent="Container" instance=ExtResource( 5 )]
margin_top = 195.0
margin_right = 185.0
margin_bottom = 377.0

[node name="DamageField" parent="Container" instance=ExtResource( 4 )]
margin_top = 381.0
margin_right = 185.0
margin_bottom = 423.0

[node name="FieldContainer" type="VBoxContainer" parent="Container"]
margin_top = 427.0
margin_right = 185.0
margin_bottom = 563.0

[node name="Senses" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_right = 185.0
margin_bottom = 16.0
field_name = "Senses"
sections = PoolStringArray( "Sense", "Range" )

[node name="Movement" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 20.0
margin_right = 185.0
margin_bottom = 36.0
field_name = "Movement"
sections = PoolStringArray( "Movement", "Speed" )

[node name="Attacks" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 40.0
margin_right = 185.0
margin_bottom = 56.0
field_name = "Attacks"
sections = PoolStringArray( "Name", "Description" )

[node name="Actions" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 60.0
margin_right = 185.0
margin_bottom = 76.0
field_name = "Actions"
sections = PoolStringArray( "Name", "Description" )

[node name="Abilities" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 80.0
margin_right = 185.0
margin_bottom = 96.0
field_name = "Abilities"
sections = PoolStringArray( "Name", "Description" )

[node name="Spells" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 100.0
margin_right = 185.0
margin_bottom = 116.0
field_name = "Spells"
sections = PoolStringArray( "Spell", "Casting Bonus", "Strength" )

[node name="SpellLikes" parent="Container/FieldContainer" instance=ExtResource( 2 )]
margin_top = 120.0
margin_right = 185.0
margin_bottom = 136.0
field_name = "Spell-like Abilities"
sections = PoolStringArray( "Spell", "Strength" )

[connection signal="refresh" from="." to="Container/HeaderField" method="_on_Page_refresh"]
[connection signal="refresh" from="." to="Container/ArmorField" method="_on_Page_refresh"]
[connection signal="refresh" from="." to="Container/StatField" method="_on_Page_refresh"]
[connection signal="refresh" from="." to="Container/DamageField" method="_on_Page_refresh"]
